[package]
name = "sized-object-pool"
version = "0.1.0"
authors = ["Xiangru Lian <admin@mail.xrlian.com>"]
edition = "2018"
description = "Object size aware object pool."
homepage = "https://github.com/NOBLES5E/sized-object-pool"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object-pool = "0.5"
thiserror = "1"
